# my_mujoco_learn

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: panda_sim.yaml
launch/: panda_sim.launch.py
models/: panda_scene.xml
mujoco_learn/: __init__.py  mujoco_env.py  panda_sim_node.py
my_mujoco_learn/: mujoco_env.py  mujoco_env2.py  panda_sim_node.py
resource/: mujoco_learn  mujoco_panda
scripts/: download_menagerie.sh  setup_models.py
